added landing page

--- a/src/index.html
+++ b/src/index.html
@@ -18,10 +18,14 @@
     <main>
         <div class = "information-box">
             <div class="title">Sign Up and Apply Today!</div>
-            <div>SWE++ is a FREE 10-week program designed to teach computer 
+            <div>Join our FREE 10-week Mentorship Program</div>
+            <div class="subtitle">SWE++ is a FREE 10-week program designed to teach computer 
 science concepts in Python in a fun and supportive environment!<br><br>
 During this program, middle school students learn to code, work on their own final project, meet new friends and mentors, hear from amazing guest speakers, and earn a certificate of completion!</div>
-            
+            <div class="button-group">
+                <button id="show-homePage">Home</button>
+                <button id="show-aboutPage">About</button>
+            </div>
         </div>
         This is a simple HTML page to demonstrate the structure of a basic web project.</p>
     </main>
